--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
         <h3>Create a New User</h3>
         <p><code>POST /api/users</code></p>
         <input id="uname" type="text" name="username" placeholder="username" />
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Create User" />
       </form>
       <form id="exercise-form" method="post">
         <h3>Add exercises</h3>
@@ -23,7 +23,7 @@
         <input id="desc" type="text" name="description" placeholder="description*" />
         <input id="dur" type="text" name="duration" placeholder="duration* (mins.)" />
         <input id="date" type="text" name="date" placeholder="date (yyyy-mm-dd)" />
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Add Exercise" />
       </form>
       <p>
         <strong>GET user's exercise log: </strong>
